Тест. AuthControllerTest
